Install and enable ckeditor for form description

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,11 @@
 {
-  "message": "hello i18n !!"
+  "message": "hello i18n !!",
+  "hello": "Hello i18n in SFC!",
+  "lobiForm": {
+    "form": {
+      "name": "Form name",
+      "name_placeholder": "Form title",
+      "description": "Description"
+    }
+  }
 }
